# rust-os

./: .gitignore  Cargo.toml  README.md  notes.md  x86_64-blog_os.json
.cargo/: config
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
